# aibnb_clone_backend

./: pyproject.toml
config/: settings.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
